--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <a href="#">Service</a>
                 <a href="#">Product</a>
                 <a href="#">Technology</a>
-                <a href="#">About</a>
-                <a href="#">Client</a>
+                <a arrow href="#">About</a>
+                <a arrow href="#">Client</a>
                 <a href="#">Partner</a>
 
             </div>
@@ -101,7 +101,7 @@
         <div class="container-4 ">
             <div class="container4 container">
                 <div>
-                    <img src="./img/Group 1317.svg" alt="">
+                    <img src="./img/nav-icon.svg`" alt="">
                     <p class="samsara"><b>PT Dwidasa Samsara Indonesia
                         </b></p>
                     <p>Git hub: rasullyusufov.com <br>
@@ -120,7 +120,7 @@
         </div>
     </main>
     <footer class="footer">
-        <h4>Copyright © 2021 - Rasuljon Yunusaliyev Uzbekistan</h4>
+        <h5>Copyright © 2021 - Rasuljon Yunusaliyev Uzbekistan</h5>
     </footer>
 </body>
 
