--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="header">
-        <nav class="nav">
+        <nav class="nav container">
             <div class="icon"><img src="./img/nav-icon.svg" alt="nav icon"></div>
             <div class="link">
                 <a href="#">Service</a>
@@ -101,12 +101,13 @@
         <div class="container-4 ">
             <div class="container4 container">
                 <div>
-                    <img src="./img/nav-icon.svg`" alt="">
+                    <img src="./img/nav-icon.svg" alt="">
                     <p class="samsara"><b>PT Dwidasa Samsara Indonesia
                         </b></p>
-                    <p>Git hub: rasullyusufov.com <br>
                         
+                    <p>Git hub: rasullyusufov.com <br>
                     </p>
+                    <p>Location: Uzbekistan Ferghana</p>
                 </div>
                 <div>
                     <h4>
@@ -120,7 +121,7 @@
         </div>
     </main>
     <footer class="footer">
-        <h5>Copyright © 2021 - Rasuljon Yunusaliyev Uzbekistan</h5>
+        <p>Copyright © 2021 - <b>Rasuljon Yunusaliyev Uzbekistan</b></p>
     </footer>
 </body>
 
