--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +12,7 @@
 <body>
     <header class="header">
         <nav class="nav container">
-            <div class="icon"><img src="./img/nav-icon.svg" alt="nav icon"></div>
+            <div class="icon"> <a href="#"><img src="./img/nav-icon.svg" alt="nav icon"></a> </div>
             <div class="link">
                 <a href="#">Service</a>
                 <a href="#">Product</a>
@@ -24,9 +23,11 @@
 
             </div>
             <div class="nav-icon">
-                <img src="./img/home.svg" alt="Union icon">
-                <img src="./img/mail.png" alt="mail icon">
-                <img src="./img/shuffle.png" alt="shuffle icon">
+                <a href="#"><img src="./img/home.svg" alt="Union icon"></a>
+                <a href="#"> <img src="./img/mail.png" alt="mail icon"></a>
+                <a href="#"><img src="./img/shuffle.png" alt="shuffle icon"></a>
+
+
             </div>
         </nav>
     </header>
@@ -59,8 +60,6 @@
                     <p>Dwidasa Samsara Indonesia (DSI) was firstly established in 2010 by the founders, who each of them
                         has a common end objective to innovate new creations by making the most of the ever-growing
                         information technology through <span>DSI</span> ’s distinct front-end based application concept.
-
-
                     <p> Managed by a team of professional experts with extensive experience and impressive track
                         records, <span>DSI</span> believes that continuous improvements and innovations assure your
                         business to run effectively and efficiently. </p>
@@ -84,7 +83,6 @@
                         <p>
                             DSI’s shared service solutions focus on the front-end based software development, designed
                             specifically for the banking and financial sectors.
-
                         </p> <button class="btn">Read More</button>
                     </div>
                     <div class="items">
@@ -101,10 +99,9 @@
         <div class="container-4 ">
             <div class="container4 container">
                 <div>
-                    <img src="./img/nav-icon.svg" alt="">
+                    <a href="#"><img src="./img/nav-icon.svg" alt=""></a>
                     <p class="samsara"><b>PT Dwidasa Samsara Indonesia
                         </b></p>
-                        
                     <p>Git hub: rasullyusufov.com <br>
                     </p>
                     <p>Location: Uzbekistan Ferghana</p>
@@ -124,5 +121,4 @@
         <p>Copyright © 2021 - <b>Rasuljon Yunusaliyev Uzbekistan</b></p>
     </footer>
 </body>
-
 </html>
